--- a/sass/components/footer/_footer-subscribe.scss
+++ b/sass/components/footer/_footer-subscribe.scss
@@ -10,7 +10,13 @@
   color: #ffffff;
 }
 
+.subscribe__form {
+  display: flex;
+  gap: 12px;
+}
+
 .subscribe__input {
+  padding-left: 16px;
   width: 358px;
   height: 50px;
 
@@ -22,20 +28,12 @@
   border-radius: 4px;
 }
 
-.subscribe {
-  display: flex;
-  gap: 12px;
-}
-
 .subscribe__button {
-  position: relative;
-  display: block;
-  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 200px;
   height: 50px;
-  padding-top: 10px;
-  padding-right: 62px;
-  padding-bottom: 10px;
-  padding-left: 28px;
   border: none;
   border-radius: 4px;
 
@@ -47,9 +45,6 @@
 }
 
 .subscribe__icon {
+  margin-left: 10px;
   fill: #ffffff;
-  position: absolute;
-  right: 28px;
-  top: 50%;
-  transform: translateY(-50%);
 }
