--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -12,8 +12,7 @@
 
 .modal {
   position: absolute;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 40px;
   left: 50%;
   top: 50%;
   width: 528px;
@@ -46,7 +45,7 @@
   top: 8px;
   cursor: pointer;
 
-  transition-property: border;
+  transition-property: border, fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
@@ -60,7 +59,6 @@
 }
 
 .modal-title {
-  margin-top: 37px;
   margin-bottom: 12px;
   @include font(700, 20px, 1.15, null);
   text-align: center;
@@ -69,11 +67,12 @@
 }
 
 .modal-input {
+  display: block;
   margin-bottom: 10px;
   padding-left: 32px;
   width: 448px;
   height: 40px;
-
+  outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
@@ -103,9 +102,12 @@
 }
 
 .input-message {
+  padding: 12px 16px;
   width: 448px;
   height: 120px;
-
+  @include font(400, 12px, 1.16, 0.01em);
+  color: rgba(117, 117, 117, 0.5);
+  outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
@@ -134,6 +136,8 @@
   line-height: 1.71;
   color: #757575;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .privacy-text span {
@@ -174,9 +178,12 @@
   line-height: 1.88;
   letter-spacing: 0.06em;
   cursor: pointer;
-  background-color: #188ce8;
+  background-color: var(--accent-blue-color);
   color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  &:hover {
+    background-color: #188ce8;
+  }
 }
 
 /* .privacy-text::before {
