--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
   top: 50%;
   width: 528px;
   height: 581px;
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: scale(1) translate(-50%, -50%);
@@ -44,18 +44,18 @@
   align-items: center;
   width: 30px;
   height: 30px;
-  background: #ffffff;
+  background: var(--white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   right: 8px;
   top: 8px;
   cursor: pointer;
-  transition-property: border, fill;
+  transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close:hover {
-  fill: #2196f3;
+.modal-close:hover, .modal-close:focus {
+  fill: var(--accent-blue-color);
 }
 
 .modal-icon {
@@ -69,28 +69,29 @@
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  color: #212121;
+  color: var(--primary-text-color);
 }
 
 .modal-input {
   display: block;
   margin-bottom: 10px;
-  padding-left: 32px;
+  padding-left: 42px;
   width: 448px;
   height: 40px;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
   transition-property: border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:hover {
-  border-color: #2196f3;
+  border-color: var(--accent-blue-color);
 }
 
 .modal-input:hover + .modal-icons {
-  fill: #2196f3;
+  fill: var(--accent-blue-color);
 }
 
 .input-text {
@@ -101,7 +102,7 @@
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .input-wrap {
@@ -118,9 +119,37 @@
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
   outline: transparent;
+  cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+}
+.input-message:hover {
+  border-color: var(--accent-blue-color);
+}
+.input-message::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  font-style: normal;
+  color: rgba(117, 117, 117, 0.5);
+}
+.input-message:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  font-style: normal;
+  color: rgba(117, 117, 117, 0.5);
+}
+.input-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  font-style: normal;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-icons {
@@ -144,7 +173,7 @@
   margin-top: 20px;
   margin-bottom: 30px;
   line-height: 1.71;
-  color: #757575;
+  color: var(--secondary-text-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,10 +182,9 @@
 .privacy-text span {
   width: 16px;
   height: 15px;
-  border: 2px solid #212121;
+  border: 2px solid var(--primary-text-color);
   border-radius: 2px;
   margin-right: 5px;
-  margin-left: 31px;
   display: flex;
   justify-items: center;
   align-items: center;
@@ -164,13 +192,13 @@
 }
 
 .modal-check:checked + .privacy-text span {
-  background-color: #2196f3;
+  background-color: var(--accent-blue-color);
   border: none;
-  fill: #ffffff;
+  fill: var(--white-color);
 }
 
 .check-link {
-  color: #2196f3;
+  color: var(--accent-blue-color);
   margin-left: 3px;
 }
 
@@ -188,10 +216,13 @@
   letter-spacing: 0.06em;
   cursor: pointer;
   background-color: var(--accent-blue-color);
-  color: #ffffff;
+  color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button:hover {
+.modal-button:hover, .modal-button:focus {
   background-color: #188ce8;
 }
 
@@ -743,7 +774,7 @@ img {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 
 .subscribe__form {
@@ -757,11 +788,35 @@ img {
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
-  background-color: #2f303a;
-  color: #ffffff;
+  background-color: var(--secondary-black-background);
+  color: var(--white-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+.subscribe__input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe__input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .subscribe__button {
@@ -778,13 +833,13 @@ img {
   letter-spacing: 0.06em;
   cursor: pointer;
   background-color: #188ce8;
-  color: #ffffff;
+  color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .subscribe__icon {
   margin-left: 10px;
-  fill: #ffffff;
+  fill: var(--white-color);
 }
 
 .portfolio {
