--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -18,7 +18,7 @@
   width: 528px;
   height: 581px;
 
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -38,18 +38,19 @@
   align-items: center;
   width: 30px;
   height: 30px;
-  background: #ffffff;
+  background: var(--white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   right: 8px;
   top: 8px;
   cursor: pointer;
 
-  transition-property: border, fill;
+  transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
-    fill: #2196f3;
+  &:hover,
+  &:focus {
+    fill: var(--accent-blue-color);
   }
 }
 
@@ -63,29 +64,30 @@
   @include font(700, 20px, 1.15, null);
   text-align: center;
 
-  color: #212121;
+  color: var(--primary-text-color);
 }
 
 .modal-input {
   display: block;
   margin-bottom: 10px;
-  padding-left: 32px;
+  padding-left: 42px;
   width: 448px;
   height: 40px;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
 
   transition-property: border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
-    border-color: #2196f3;
+    border-color: var(--accent-blue-color);
   }
 }
 
 .modal-input:hover + .modal-icons {
-  fill: #2196f3;
+  fill: var(--accent-blue-color);
 }
 
 .input-text {
@@ -94,7 +96,7 @@
   font-style: normal;
   @include font(400, 12px, 1.16, 0.01em);
 
-  color: #757575;
+  color: var(--secondary-text-color);
 }
 
 .input-wrap {
@@ -108,9 +110,14 @@
   @include font(400, 12px, 1.16, 0.01em);
   color: rgba(117, 117, 117, 0.5);
   outline: transparent;
+  cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+  &:hover, &:focus {
+    border-color: var(--accent-blue-color);
+  }
+  }
 }
 
 .modal-icons {
@@ -134,7 +141,7 @@
   margin-top: 20px;
   margin-bottom: 30px;
   line-height: 1.71;
-  color: #757575;
+  color: var(--secondary-text-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -143,10 +150,9 @@
 .privacy-text span {
   width: 16px;
   height: 15px;
-  border: 2px solid #212121;
+  border: 2px solid var(--primary-text-color);
   border-radius: 2px;
   margin-right: 5px;
-  margin-left: 31px;
   display: flex;
   justify-items: center;
   align-items: center;
@@ -154,13 +160,13 @@
 }
 
 .modal-check:checked + .privacy-text span {
-  background-color: #2196f3;
+  background-color: var(--accent-blue-color);
   border: none;
-  fill: #ffffff;
+  fill: var(--white-color);
 }
 
 .check-link {
-  color: #2196f3;
+  color: var(--accent-blue-color);
   margin-left: 3px;
 }
 
@@ -179,11 +185,15 @@
   letter-spacing: 0.06em;
   cursor: pointer;
   background-color: var(--accent-blue-color);
-  color: #ffffff;
+  color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #188ce8;
   }
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .privacy-text::before {
