--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -114,9 +114,9 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     border-color: var(--accent-blue-color);
-  }
   }
 }
 
@@ -191,7 +191,7 @@
   &:focus {
     background-color: #188ce8;
   }
-  transition-property: background-color, color, box-shadow;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
