--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "./utils/mixins";
 @import "./utils/colors";
-@import "./utils/modal";
-@import "./components/common";
+@import "./components/modal";
+@import "./utils/common";
 @import "./components/header";
 @import "./components/logo";
 @import "./components/navigation";
